--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src='./js/app.js'></script>
     <script src="./js/services.js"></script>
     <script src="./js/controllers.js"></script>
+    <script src="./js/factories.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
